--- a/css/fabio-santos-lobao.webflow.css
+++ b/css/fabio-santos-lobao.webflow.css
@@ -864,6 +864,10 @@ blockquote {
   text-transform: uppercase;
 }
 
+.image-4 {
+  max-width: 140%;
+}
+
 html.w-mod-js *[data-ix="tile-1"] {
   opacity: 0;
   -webkit-transform: scale(0.96, 0.96);
@@ -1149,8 +1153,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 3;
   -ms-grid-row-span: 1;
   grid-row-end: 4;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1166,8 +1168,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 1;
   -ms-grid-row-span: 1;
   grid-row-end: 2;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1183,8 +1183,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 1;
   -ms-grid-row-span: 1;
   grid-row-end: 2;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1200,8 +1198,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 1;
   -ms-grid-row-span: 1;
   grid-row-end: 2;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1217,8 +1213,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 1;
   -ms-grid-row-span: 1;
   grid-row-end: 2;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1234,8 +1228,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 2;
   -ms-grid-row-span: 1;
   grid-row-end: 3;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1251,8 +1243,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 4;
   -ms-grid-row-span: 1;
   grid-row-end: 5;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1268,8 +1258,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 2;
   -ms-grid-row-span: 1;
   grid-row-end: 3;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1285,8 +1273,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 2;
   -ms-grid-row-span: 1;
   grid-row-end: 3;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1302,8 +1288,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 2;
   -ms-grid-row-span: 1;
   grid-row-end: 3;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1319,8 +1303,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 5;
   -ms-grid-row-span: 1;
   grid-row-end: 6;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1336,8 +1318,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 3;
   -ms-grid-row-span: 1;
   grid-row-end: 4;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1353,8 +1333,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 3;
   -ms-grid-row-span: 1;
   grid-row-end: 4;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1370,8 +1348,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 3;
   -ms-grid-row-span: 1;
   grid-row-end: 4;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1387,8 +1363,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 3;
   -ms-grid-row-span: 1;
   grid-row-end: 4;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1404,8 +1378,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 6;
   -ms-grid-row-span: 1;
   grid-row-end: 7;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1421,8 +1393,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 4;
   -ms-grid-row-span: 1;
   grid-row-end: 5;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1438,8 +1408,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 4;
   -ms-grid-row-span: 1;
   grid-row-end: 5;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1455,8 +1423,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 4;
   -ms-grid-row-span: 1;
   grid-row-end: 5;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1472,8 +1438,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 4;
   -ms-grid-row-span: 1;
   grid-row-end: 5;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1489,8 +1453,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 2;
   -ms-grid-row-span: 1;
   grid-row-end: 3;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1506,8 +1468,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 5;
   -ms-grid-row-span: 1;
   grid-row-end: 6;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1523,8 +1483,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 5;
   -ms-grid-row-span: 1;
   grid-row-end: 6;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1540,8 +1498,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 5;
   -ms-grid-row-span: 1;
   grid-row-end: 6;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1557,8 +1513,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 5;
   -ms-grid-row-span: 1;
   grid-row-end: 6;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1574,8 +1528,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 6;
   -ms-grid-row-span: 1;
   grid-row-end: 7;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1591,8 +1543,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 6;
   -ms-grid-row-span: 1;
   grid-row-end: 7;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1608,8 +1558,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 6;
   -ms-grid-row-span: 1;
   grid-row-end: 7;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
@@ -1625,8 +1573,6 @@ html.w-mod-js *[data-ix="hero-text"] {
   grid-row-start: 6;
   -ms-grid-row-span: 1;
   grid-row-end: 7;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
